# rust-compile-time-run

./: Cargo.toml  LICENSE  README.md  README.tpl  rustfmt.toml
.github/workflows/: rust.yml
compile-time-run-macro/: Cargo.toml  README.md
compile-time-run-macro/src/: lib.rs
src/: lib.rs
tests/: test.rs
