[package]
name        = "compile-time-run"
version     = "0.2.1"
authors     = ["Maarten de Vries <maarten@de-vri.es>"]
license     = "BSD-2-Clause"
description = "run a command at compile time and capture the output"
edition     = "2018"

[dependencies]
proc-macro-hack        = "0.5"
compile-time-run-macro = { version="0.2", path = "compile-time-run-macro" }

[workspace]
members = ["compile-time-run-macro"]
