[package]
name          = "compile-time-run"
version       = "0.2.6"
authors       = ["Maarten de Vries <maarten@de-vri.es>"]
license       = "BSD-2-Clause"
description   = "run a command at compile time and capture the output"
documentation = "https://docs.rs/compile-time-run"
repository    = "https://github.com/de-vri-es/rust-compile-time-run"
readme        = "README.md"
keywords      = ["build", "command", "run"]
categories    = ["development-tools", "development-tools::build-utils"]
edition       = "2018"

[badges]
travis-ci = { repository = "de-vri-es/rust-compile-time-run" }

[dependencies]
proc-macro-hack        = "0.5"
compile-time-run-macro = { version="0.2.6", path = "compile-time-run-macro" }

[workspace]
members = ["compile-time-run-macro"]
