[package]
name = "compile-time-run"
version = "0.2.8"
description = "run a command at compile time and capture the output"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]

documentation = "https://docs.rs/compile-time-run"
repository = "https://github.com/de-vri-es/rust-compile-time-run"
readme = "README.md"
keywords = ["build", "command", "run"]
categories = ["development-tools", "development-tools::build-utils"]

edition = "2018"

[badges]
travis-ci = { repository = "de-vri-es/rust-compile-time-run" }

[lib]
proc-macro = true

[dev-dependencies]
assert2 = "0.3.0"

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
