[package]
name = "compile-time-run-macro"
version = "0.2.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
description = "implementation crate for compile-time-run"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
