[package]
name          = "compile-time-run-macro"
version       = "0.2.5"
authors       = ["Maarten de Vries <maarten@de-vri.es>"]
license       = "BSD-2-Clause"
description   = "implementation crate for compile-time-run"
documentation = "https://docs.rs/compile-time-run-macro"
repository    = "https://github.com/de-vri-es/rust-compile-time-run"
readme        = "README.md"
edition       = "2018"

[badges]
travis-ci = { repository = "de-vri-es/rust-compile-time-run" }

[lib]
proc-macro = true

[dependencies]
syn             = "0.15"
proc-macro2     = "0.4"
proc-macro-hack = "0.5"
quote           = "0.6"
